# nilsmf-arg

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
markdown/: about-me.md  contact.md  root.md
markdown/articles/: about-me.md  contact.md  root.md
markdown/projects/: 00_website.md  01_backend.md  Backend.md  Website.md  backend.md  cardgame.md  frontend.md
markdown/recap-project/: 0_gnf.md  0_website.md  1_cardgame.md  backend.md  frontend.md
markdown/unpublished/: 0_gnf.md  gnf.md
src/: main.rs
src/api/: articles.rs  images.rs  mod.rs  projects.rs
src/db/: mod.rs  setup.rs
src/utils/: consts.rs  funcs.rs  mod.rs
