[package]
name = "nilsmf_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.7.0"
actix-web = { version = "4.4.0", features = ["openssl"] }
openssl = "0.10.63"
# rusqlite = "0.30.0"
serde = "1.0.189"
serde_json = "1.0.108"
tokio = "1.33.0"
walkdir = "2.4.0"
