[package]
name = "nilsmf_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
rocket = "0.5.0"
serde = "1.0.189"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] } 
tokio-postgres = "0.7.10"
