[package]
name = "nilsmf_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.189"
serde_json = "1.0.108"
tokio = "1.33.0"
utoipa = "4.2.3"
rocket-errors = "0.1.0"
rocket = "0.5.1"
mongodb = "2.8.2"
anyhow = "1.0.86"
utoipa-swagger-ui = { version = "7.1.0", features = ["rocket"] }
once_cell = "1.19.0"
postgres = "0.19.7"
nilsmf-lib = { git = "https://github.com/Neelzee/nilsmf-lib" }
diesel = { version = "2.2.1", features = ["postgres"] }
